Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 │     ├──MapInfo File
 │     ├──PGDump
 </code></pre>
+
+<h2>
+<a id="gui" class="anchor" href="#gui" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GUI</h2>
+
+<p><img src="https://raw.githubusercontent.com/rjspiers/qgis-batch-save-layers/gh-pages/batch-save-layers-dialog.png" alt="image of GUI"></p>
       </section>
     </div>
 
