Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
 </code></pre>
 
 <h2>
-<a id="gui" class="anchor" href="#gui" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GUI</h2>
+<a id="icon" class="anchor" href="#icon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Icon</h2>
+
+<p><img src="https://raw.githubusercontent.com/rjspiers/qgis-batch-save-layers/master/icon.png" alt="image of icon"></p>
+
+<h2>
+<a id="gui-dialog" class="anchor" href="#gui-dialog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GUI Dialog</h2>
 
 <p><img src="https://raw.githubusercontent.com/rjspiers/qgis-batch-save-layers/gh-pages/batch-save-layers-dialog.png" alt="image of GUI"></p>
       </section>
