--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
 <a id="gui-dialog" class="anchor" href="#gui-dialog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GUI Dialog</h2>
 
 <p><img src="https://raw.githubusercontent.com/rjspiers/qgis-batch-save-layers/gh-pages/batch-save-layers-dialog.png" alt="image of GUI"></p>
+
+<h2>
+<a id="planned" class="anchor" href="#planned" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Planned</h2>
+
+<ul>
+<li>Write metadata file to export-directory</li>
+<li>Option to zip</li>
+<li>Specify layers to export</li>
+</ul>
       </section>
     </div>
 
